# ec_jrc_idees

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ec_jrc_idees/: idees.py
ec_jrc_idees/config/: config.yaml
ec_jrc_idees/config/files/: Transport.yaml
ec_jrc_idees/resources/: categories_energy_intensive.ods  categories_non_energy_intensive.ods  config.yaml  config_PowerGen.yaml  fuel_code_idees_to_eurostat.ods  sector_config.yaml
ec_jrc_idees/settings/: __init__.py  config.py
ec_jrc_idees/settings/files/: Transport.yaml  config.yaml
ec_jrc_idees/transport/: __init__.py  sheets.py
ec_jrc_idees/transport/sections/: trroad_ene.py
ec_jrc_idees/transport/trroad_ene/: __init__.py  sections.py
ec_jrc_idees/utils/: __init__.py  cleaning.py  config.py  generic.py  naming.py  operations.py  preprocess.py  renaming.py  sheet.py  style_filters.py
src/ec_jrc_idees/: generics.py  parser.py  transport.py  utils.py
src/ec_jrc_idees/_utils/: generic.py
src/ec_jrc_idees/config/: Transport.yaml
src/ec_jrc_idees/data/: Transport.yaml  parser.yaml
src/ec_jrc_idees/settings/: config.py
src/ec_jrc_idees/transport/: __init__.py
src/ec_jrc_idees/transport/trroad_ene/: __init__.py  sections.py
src/ec_jrc_idees/utils/: generic.py
tests/: conftest.py  generic_test.py  parser_test.py  transport_test.py  utils_test.py
tests/files/: JRC-IDEES-2021_Industry_DE.xlsx  JRC-IDEES-2021_Transport_DE.xlsx
