[project]
name = "ec_jrc_idees"
version = "0.1.0"
description = "Easy JRC-IDEES data!"
authors = [{name = "Ivan Ruiz Manuel", email = "72193617+irm-codebase@users.noreply.github.com"}]
requires-python = ">= 3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest", "mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.codespell]
skip = 'tests/*.py,*.shp,*.geojson'
count = ''
quiet-level = 3
ignore-words-list = "socio-economic,manuel"

[tool.mypy]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
ec_jrc_idees = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.2,<3"

# Environments
[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.ruff]
target-version = "py311"
builtins = ["snakemake"]

[tool.ruff.lint]
select = ["E", "F", "I", "Q", "W", "D", "PT", "PL", "PD", "C90"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104"]
"*.ipynb" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 200
ignore-overlong-task-comments = true

[tool.ruff.format]
exclude = [".*.egg-info"]
skip-magic-trailing-comma = true
