[project]
name = "ec_jrc_idees"
version = "0.1.0"
description = "Easy JRC-IDEES data!"
authors = [{name = "Ivan Ruiz Manuel", email = "72193617+irm-codebase@users.noreply.github.com"}]
requires-python = ">= 3.11"
dependencies = ["styleframe>=4.2,<5"]

[project.optional-dependencies]
test = ["pytest", "mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.codespell]
skip = 'tests/*.py,*.shp,*.geojson'
count = ''
quiet-level = 3
ignore-words-list = "socio-economic,manuel"

[tool.mypy]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
ec_jrc_idees = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.2,<3"
pycountry = ">=24.6.1,<25"
xarray = ">=2024.7.0,<2025"
pandas-stubs = ">=2.2.2.240805,<3"
pyyaml = ">=6.0.1,<7"
types-pyyaml = ">=6.0.12.20240724,<7"
inflection = ">=0.5.1,<0.6"

# Environments
[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.dependencies]
ipykernel = ">=6.29.5,<7"

[tool.ruff]
target-version = "py311"
builtins = ["snakemake"]

[tool.ruff.lint]
select = ["E", "F", "I", "Q", "W", "D", "PT", "PL", "PD", "C90", "UP"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
"test/**" =["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 200
ignore-overlong-task-comments = true

[tool.ruff.format]
exclude = [".*.egg-info"]
skip-magic-trailing-comma = true
