[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=70.0"]

[project]
name = "ec_jrc_idees"
version = "0.1.0"
description = "Easy JRC-IDEES data: tidy, organised and maintainable!"
authors = [{name = "Ivan Ruiz Manuel", email = "i.ruizmanuel@tudelft.nl"}]
requires-python = ">= 3.12"
readme = "README.md"
dependencies = ["styleframe>=4.2,<5"]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/calliope-project/ec_jrc_idees"
Repository = "https://github.com/calliope-project/ec_jrc_idees"
Issues = "https://github.com/calliope-project/ec_jrc_idees/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.codespell]
skip = 'tests/*.py'
count = ''
quiet-level = 3
ignore-words-list = "socio-economic,manuel"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
ec_jrc_idees = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.2,<3"
pycountry = ">=24.6.1,<25"
xarray = ">=2024.7.0,<2025"
pandas-stubs = ">=2.2.2.240805,<3"
pyyaml = ">=6.0.1,<7"
types-pyyaml = ">=6.0.12.20240724,<7"
inflection = ">=0.5.1,<0.6"
requests = ">=2.32.3,<3"
pytest = ">=8.3.3,<9"
ruff = ">=0.6.5,<0.7"
mypy = ">=1.11.2,<2"

# Environments
[tool.pixi.environments]
default = { solve-group = "default" }

[tool.ruff.lint]
select = ["E", "F", "I", "Q", "W", "D", "PT", "PL", "PD", "C90", "UP"]
exclude = [".eggs", ".pixi", ".ruff_cache"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
"__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 200
ignore-overlong-task-comments = true

[tool.ruff.format]
exclude = [".*.egg-info"]
skip-magic-trailing-comma = true

[tool.mypy]
disable_error_code = "import-untyped"
python_version = ">= 3.12"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]
